Bug 251534 - [GLib] Fix typo of cache_directory parameter to webkit_network_session_new
Summary: [GLib] Fix typo of cache_directory parameter to webkit_network_session_new
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Michael Catanzaro
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-01 11:26 PST by Michael Catanzaro
Modified: 2023-02-01 18:47 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Catanzaro 2023-02-01 11:26:44 PST
Fix typo of cache_directory parameter to webkit_network_session_new
Comment 1 Michael Catanzaro 2023-02-01 11:28:09 PST
Pull request: https://github.com/WebKit/WebKit/pull/9465
Comment 2 EWS 2023-02-01 18:47:12 PST
Committed 259732@main (35dee875229d): <https://commits.webkit.org/259732@main>

Reviewed commits have been landed. Closing PR #9465 and removing active labels.