[GLib] Fix typo of cache_directory parameter to webkit_network_session_new https://bugs.webkit.org/show_bug.cgi?id=251534

Reviewed by Adrian Perez de Castro.

This is an introspection API break, so it's good to catch it early.

* Source/WebKit/UIProcess/API/glib/WebKitNetworkSession.cpp:
* Source/WebKit/UIProcess/API/glib/WebKitNetworkSession.h.in:

Canonical link: https://commits.webkit.org/259732@main